--- a/.github/workflows/A-Car.yml
+++ b/.github/workflows/A-Car.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: 3.7
          
       - name: 'Install requirements'
-        run: pip install -r ./oooo/C.TXT
+        run: pip install -r ./ooo/C.TXT
         
       - name: '-' 
         run: python3 ./ooo/QCZJ.py
