--- a/.github/workflows/A-DD_buy.yml
+++ b/.github/workflows/A-DD_buy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: '-' 
         run: python3 ./ooo/DD_buy.py
         env:
-            Card_telegram: ${{ secrets.Card_telegram }}
+            TELE_NOTICE_1: ${{ secrets.TELE_NOTICE_1 }}
             DD_SECRET: ${{ secrets.DD_SECRET }}
             DD_URL: ${{ secrets.DD_URL }}
             
